[package]
name = "polly"
version = "0.1.0"
authors = ["Aaronepower <theaaronepower@gmail.com>"]

[lib]
name = "polly"
path = "src/lib.rs"

[[bin]]
name = "pollybin"
path = "src/main.rs"

[dependencies]
clap = {version = "2.1.1", features = ["yaml"]}
serde = "0.6.7"
serde_json = "0.6.0"
lazy_static = "0.1.15"