[package]
name = "polly"
version = "0.1.2"
authors = ["Aaronepower <theaaronepower@gmail.com>"]
repository = "https://gitlab.com/Polly-lang/Polly.git"
homepage = "https://polly-lang.github.io/Polly/polly/"
license = "MIT/Apache-2.0"
readme = "README.md"
description = "A templating language for Rust."
[lib]
name = "polly"
path = "src/lib.rs"

[[bin]]
name = "pollyc"
path = "src/main.rs"

[dependencies]
clap = {version = "2.1.1", features = ["yaml"]}
serde = "0.6.7"
serde_json = "0.6.0"
lazy_static = "0.1.15"
